generated/grammar/TinyParser.cpp

// Generated from grammar/Tiny.g4 by ANTLR 4.13.1


#include "TinyVisitor.h"

#include "TinyParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct TinyParserStaticData final {
  TinyParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  TinyParserStaticData(const TinyParserStaticData&) = delete;
  TinyParserStaticData(TinyParserStaticData&&) = delete;
  TinyParserStaticData& operator=(const TinyParserStaticData&) = delete;
  TinyParserStaticData& operator=(TinyParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag tinyParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
TinyParserStaticData *tinyParserStaticData = nullptr;

void tinyParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (tinyParserStaticData != nullptr) {
    return;
  }
#else
  assert(tinyParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<TinyParserStaticData>(
    std::vector<std::string>{
      "program", "declaration", "functionDecl", "paramList", "param", "statement", 
      "varDecl", "assignment", "returnStmt", "printStmt", "ifStmt", "whileStmt", 
      "forStmt", "exprStmt", "block", "expression", "logicalOr", "logicalAnd", 
      "equality", "comparison", "addition", "multiplication", "unary", "postfix", 
      "primary", "arrayLiteral", "expressionList", "typeSpec"
    },
    std::vector<std::string>{
      "", "'('", "')'", "'->'", "','", "':'", "';'", "'='", "'['", "']'", 
      "'..'", "'{'", "'}'", "'||'", "'&&'", "'=='", "'!='", "'<'", "'<='", 
      "'>'", "'>='", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'let'", 
      "'var'", "'fn'", "'return'", "'if'", "'else'", "'while'", "'for'", 
      "'in'", "'print'", "'true'", "'false'", "'int'", "'float'", "'bool'", 
      "'string'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "LET", "VAR", "FN", "RETURN", 
      "IF", "ELSE", "WHILE", "FOR", "IN", "PRINT", "TRUE", "FALSE", "INT_T", 
      "FLOAT_T", "BOOL_T", "STRING_T", "INT_LIT", "FLOAT_LIT", "STRING_LIT", 
      "IDENT", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  tinyParserStaticData = staticData.release();
}

}

TinyParser::TinyParser(TokenStream *input) : TinyParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

TinyParser::TinyParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  TinyParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *tinyParserStaticData->atn, tinyParserStaticData->decisionToDFA, tinyParserStaticData->sharedContextCache, options);
}

TinyParser::~TinyParser() {
  delete _interpreter;
}

const atn::ATN& TinyParser::getATN() const {
  return *tinyParserStaticData->atn;
}

std::string TinyParser::getGrammarFileName() const {
  return "Tiny.g4";
}

const std::vector<std::string>& TinyParser::getRuleNames() const {
  return tinyParserStaticData->ruleNames;
}

const dfa::Vocabulary& TinyParser::getVocabulary() const {
  return tinyParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView TinyParser::getSerializedATN() const {
  return tinyParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

TinyParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TinyParser::ProgramContext::EOF() {
  return getToken(TinyParser::EOF, 0);
}

std::vector<TinyParser::DeclarationContext *> TinyParser::ProgramContext::declaration() {
  return getRuleContexts<TinyParser::DeclarationContext>();
}

TinyParser::DeclarationContext* TinyParser::ProgramContext::declaration(size_t i) {
  return getRuleContext<TinyParser::DeclarationContext>(i);
}


size_t TinyParser::ProgramContext::getRuleIndex() const {
  return TinyParser::RuleProgram;
}


std::any TinyParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TinyVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

TinyParser::ProgramContext* TinyParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, TinyParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(59);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 132452433529090) != 0)) {
      setState(56);
      declaration();
      setState(61);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(62);
    match(TinyParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

TinyParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TinyParser::FunctionDeclContext* TinyParser::DeclarationContext::functionDecl() {
  return getRuleContext<TinyParser::FunctionDeclContext>(0);
}

TinyParser::StatementContext* TinyParser::DeclarationContext::statement() {
  return getRuleContext<TinyParser::StatementContext>(0);
}


size_t TinyParser::DeclarationContext::getRuleIndex() const {
  return TinyParser::RuleDeclaration;
}


std::any TinyParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TinyVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

TinyParser::DeclarationContext* TinyParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, TinyParser::RuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(66);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case TinyParser::FN: {
        enterOuterAlt(_localctx, 1);
        setState(64);
        functionDecl();
        break;
      }

      case TinyParser::T__0:
      case TinyParser::T__7:
      case TinyParser::T__10:
      case TinyParser::T__21:
      case TinyParser::T__25:
      case TinyParser::LET:
      case TinyParser::VAR:
      case TinyParser::RETURN:
      case TinyParser::IF:
      case TinyParser::WHILE:
      case TinyParser::FOR:
      case TinyParser::PRINT:
      case TinyParser::TRUE:
      case TinyParser::FALSE:
      case TinyParser::INT_LIT:
      case TinyParser::FLOAT_LIT:
      case TinyParser::STRING_LIT:
      case TinyParser::IDENT: {
        enterOuterAlt(_localctx, 2);
        setState(65);
        statement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclContext ------------------------------------------------------------------

TinyParser::FunctionDeclContext::FunctionDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TinyParser::FunctionDeclContext::FN() {
  return getToken(TinyParser::FN, 0);
}

tree::TerminalNode* TinyParser::FunctionDeclContext::IDENT() {
  return getToken(TinyParser::IDENT, 0);
}

TinyParser::BlockContext* TinyParser::FunctionDeclContext::block() {
  return getRuleContext<TinyParser::BlockContext>(0);
}

TinyParser::ParamListContext* TinyParser::FunctionDeclContext::paramList() {
  return getRuleContext<TinyParser::ParamListContext>(0);
}

TinyParser::TypeSpecContext* TinyParser::FunctionDeclContext::typeSpec() {
  return getRuleContext<TinyParser::TypeSpecContext>(0);
}


size_t TinyParser::FunctionDeclContext::getRuleIndex() const {
  return TinyParser::RuleFunctionDecl;
}


std::any TinyParser::FunctionDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TinyVisitor*>(visitor))
    return parserVisitor->visitFunctionDecl(this);
  else
    return visitor->visitChildren(this);
}

TinyParser::FunctionDeclContext* TinyParser::functionDecl() {
  FunctionDeclContext *_localctx = _tracker.createInstance<FunctionDeclContext>(_ctx, getState());
  enterRule(_localctx, 4, TinyParser::RuleFunctionDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    match(TinyParser::FN);
    setState(69);
    match(TinyParser::IDENT);
    setState(70);
    match(TinyParser::T__0);
    setState(72);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == TinyParser::IDENT) {
      setState(71);
      paramList();
    }
    setState(74);
    match(TinyParser::T__1);
    setState(77);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == TinyParser::T__2) {
      setState(75);
      match(TinyParser::T__2);
      setState(76);
      typeSpec(0);
    }
    setState(79);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamListContext ------------------------------------------------------------------

TinyParser::ParamListContext::ParamListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<TinyParser::ParamContext *> TinyParser::ParamListContext::param() {
  return getRuleContexts<TinyParser::ParamContext>();
}

TinyParser::ParamContext* TinyParser::ParamListContext::param(size_t i) {
  return getRuleContext<TinyParser::ParamContext>(i);
}


size_t TinyParser::ParamListContext::getRuleIndex() const {
  return TinyParser::RuleParamList;
}


std::any TinyParser::ParamListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TinyVisitor*>(visitor))
    return parserVisitor->visitParamList(this);
  else
    return visitor->visitChildren(this);
}

TinyParser::ParamListContext* TinyParser::paramList() {
  ParamListContext *_localctx = _tracker.createInstance<ParamListContext>(_ctx, getState());
  enterRule(_localctx, 6, TinyParser::RuleParamList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    param();
    setState(86);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TinyParser::T__3) {
      setState(82);
      match(TinyParser::T__3);
      setState(83);
      param();
      setState(88);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamContext ------------------------------------------------------------------

TinyParser::ParamContext::ParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TinyParser::ParamContext::IDENT() {
  return getToken(TinyParser::IDENT, 0);
}

TinyParser::TypeSpecContext* TinyParser::ParamContext::typeSpec() {
  return getRuleContext<TinyParser::TypeSpecContext>(0);
}


size_t TinyParser::ParamContext::getRuleIndex() const {
  return TinyParser::RuleParam;
}


std::any TinyParser::ParamContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TinyVisitor*>(visitor))
    return parserVisitor->visitParam(this);
  else
    return visitor->visitChildren(this);
}

TinyParser::ParamContext* TinyParser::param() {
  ParamContext *_localctx = _tracker.createInstance<ParamContext>(_ctx, getState());
  enterRule(_localctx, 8, TinyParser::RuleParam);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    match(TinyParser::IDENT);
    setState(90);
    match(TinyParser::T__4);
    setState(91);
    typeSpec(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

TinyParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TinyParser::VarDeclContext* TinyParser::StatementContext::varDecl() {
  return getRuleContext<TinyParser::VarDeclContext>(0);
}

TinyParser::AssignmentContext* TinyParser::StatementContext::assignment() {
  return getRuleContext<TinyParser::AssignmentContext>(0);
}

TinyParser::ReturnStmtContext* TinyParser::StatementContext::returnStmt() {
  return getRuleContext<TinyParser::ReturnStmtContext>(0);
}

TinyParser::PrintStmtContext* TinyParser::StatementContext::printStmt() {
  return getRuleContext<TinyParser::PrintStmtContext>(0);
}

TinyParser::IfStmtContext* TinyParser::StatementContext::ifStmt() {
  return getRuleContext<TinyParser::IfStmtContext>(0);
}

TinyParser::WhileStmtContext* TinyParser::StatementContext::whileStmt() {
  return getRuleContext<TinyParser::WhileStmtContext>(0);
}

TinyParser::ForStmtContext* TinyParser::StatementContext::forStmt() {
  return getRuleContext<TinyParser::ForStmtContext>(0);
}

TinyParser::ExprStmtContext* TinyParser::StatementContext::exprStmt() {
  return getRuleContext<TinyParser::ExprStmtContext>(0);
}

TinyParser::BlockContext* TinyParser::StatementContext::block() {
  return getRuleContext<TinyParser::BlockContext>(0);
}


size_t TinyParser::StatementContext::getRuleIndex() const {
  return TinyParser::RuleStatement;
}


std::any TinyParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TinyVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

TinyParser::StatementContext* TinyParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 10, TinyParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(112);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(93);
      varDecl();
      setState(94);
      match(TinyParser::T__5);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(96);
      assignment();
      setState(97);
      match(TinyParser::T__5);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(99);
      returnStmt();
      setState(100);
      match(TinyParser::T__5);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(102);
      printStmt();
      setState(103);
      match(TinyParser::T__5);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(105);
      ifStmt();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(106);
      whileStmt();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(107);
      forStmt();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(108);
      exprStmt();
      setState(109);
      match(TinyParser::T__5);
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(111);
      block();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclContext ------------------------------------------------------------------

TinyParser::VarDeclContext::VarDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TinyParser::VarDeclContext::LET() {
  return getToken(TinyParser::LET, 0);
}

tree::TerminalNode* TinyParser::VarDeclContext::IDENT() {
  return getToken(TinyParser::IDENT, 0);
}

TinyParser::ExpressionContext* TinyParser::VarDeclContext::expression() {
  return getRuleContext<TinyParser::ExpressionContext>(0);
}

TinyParser::TypeSpecContext* TinyParser::VarDeclContext::typeSpec() {
  return getRuleContext<TinyParser::TypeSpecContext>(0);
}

tree::TerminalNode* TinyParser::VarDeclContext::VAR() {
  return getToken(TinyParser::VAR, 0);
}


size_t TinyParser::VarDeclContext::getRuleIndex() const {
  return TinyParser::RuleVarDecl;
}


std::any TinyParser::VarDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TinyVisitor*>(visitor))
    return parserVisitor->visitVarDecl(this);
  else
    return visitor->visitChildren(this);
}

TinyParser::VarDeclContext* TinyParser::varDecl() {
  VarDeclContext *_localctx = _tracker.createInstance<VarDeclContext>(_ctx, getState());
  enterRule(_localctx, 12, TinyParser::RuleVarDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(130);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case TinyParser::LET: {
        enterOuterAlt(_localctx, 1);
        setState(114);
        match(TinyParser::LET);
        setState(115);
        match(TinyParser::IDENT);
        setState(118);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == TinyParser::T__4) {
          setState(116);
          match(TinyParser::T__4);
          setState(117);
          typeSpec(0);
        }
        setState(120);
        match(TinyParser::T__6);
        setState(121);
        expression();
        break;
      }

      case TinyParser::VAR: {
        enterOuterAlt(_localctx, 2);
        setState(122);
        match(TinyParser::VAR);
        setState(123);
        match(TinyParser::IDENT);
        setState(126);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == TinyParser::T__4) {
          setState(124);
          match(TinyParser::T__4);
          setState(125);
          typeSpec(0);
        }
        setState(128);
        match(TinyParser::T__6);
        setState(129);
        expression();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

TinyParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TinyParser::AssignmentContext::IDENT() {
  return getToken(TinyParser::IDENT, 0);
}

std::vector<TinyParser::ExpressionContext *> TinyParser::AssignmentContext::expression() {
  return getRuleContexts<TinyParser::ExpressionContext>();
}

TinyParser::ExpressionContext* TinyParser::AssignmentContext::expression(size_t i) {
  return getRuleContext<TinyParser::ExpressionContext>(i);
}


size_t TinyParser::AssignmentContext::getRuleIndex() const {
  return TinyParser::RuleAssignment;
}


std::any TinyParser::AssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TinyVisitor*>(visitor))
    return parserVisitor->visitAssignment(this);
  else
    return visitor->visitChildren(this);
}

TinyParser::AssignmentContext* TinyParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 14, TinyParser::RuleAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(142);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(132);
      match(TinyParser::IDENT);
      setState(133);
      match(TinyParser::T__6);
      setState(134);
      expression();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(135);
      match(TinyParser::IDENT);
      setState(136);
      match(TinyParser::T__7);
      setState(137);
      expression();
      setState(138);
      match(TinyParser::T__8);
      setState(139);
      match(TinyParser::T__6);
      setState(140);
      expression();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnStmtContext ------------------------------------------------------------------

TinyParser::ReturnStmtContext::ReturnStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TinyParser::ReturnStmtContext::RETURN() {
  return getToken(TinyParser::RETURN, 0);
}

TinyParser::ExpressionContext* TinyParser::ReturnStmtContext::expression() {
  return getRuleContext<TinyParser::ExpressionContext>(0);
}


size_t TinyParser::ReturnStmtContext::getRuleIndex() const {
  return TinyParser::RuleReturnStmt;
}


std::any TinyParser::ReturnStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TinyVisitor*>(visitor))
    return parserVisitor->visitReturnStmt(this);
  else
    return visitor->visitChildren(this);
}

TinyParser::ReturnStmtContext* TinyParser::returnStmt() {
  ReturnStmtContext *_localctx = _tracker.createInstance<ReturnStmtContext>(_ctx, getState());
  enterRule(_localctx, 16, TinyParser::RuleReturnStmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(144);
    match(TinyParser::RETURN);
    setState(146);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 132353783496962) != 0)) {
      setState(145);
      expression();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrintStmtContext ------------------------------------------------------------------

TinyParser::PrintStmtContext::PrintStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TinyParser::PrintStmtContext::PRINT() {
  return getToken(TinyParser::PRINT, 0);
}

TinyParser::ExpressionListContext* TinyParser::PrintStmtContext::expressionList() {
  return getRuleContext<TinyParser::ExpressionListContext>(0);
}


size_t TinyParser::PrintStmtContext::getRuleIndex() const {
  return TinyParser::RulePrintStmt;
}


std::any TinyParser::PrintStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TinyVisitor*>(visitor))
    return parserVisitor->visitPrintStmt(this);
  else
    return visitor->visitChildren(this);
}

TinyParser::PrintStmtContext* TinyParser::printStmt() {
  PrintStmtContext *_localctx = _tracker.createInstance<PrintStmtContext>(_ctx, getState());
  enterRule(_localctx, 18, TinyParser::RulePrintStmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(148);
    match(TinyParser::PRINT);
    setState(149);
    match(TinyParser::T__0);
    setState(151);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 132353783496962) != 0)) {
      setState(150);
      expressionList();
    }
    setState(153);
    match(TinyParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStmtContext ------------------------------------------------------------------

TinyParser::IfStmtContext::IfStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TinyParser::IfStmtContext::IF() {
  return getToken(TinyParser::IF, 0);
}

TinyParser::ExpressionContext* TinyParser::IfStmtContext::expression() {
  return getRuleContext<TinyParser::ExpressionContext>(0);
}

std::vector<TinyParser::BlockContext *> TinyParser::IfStmtContext::block() {
  return getRuleContexts<TinyParser::BlockContext>();
}

TinyParser::BlockContext* TinyParser::IfStmtContext::block(size_t i) {
  return getRuleContext<TinyParser::BlockContext>(i);
}

tree::TerminalNode* TinyParser::IfStmtContext::ELSE() {
  return getToken(TinyParser::ELSE, 0);
}

TinyParser::IfStmtContext* TinyParser::IfStmtContext::ifStmt() {
  return getRuleContext<TinyParser::IfStmtContext>(0);
}

